<resources>
    <string name="app_name">Technosonic2k17</string>
    <string name="about">About Developers</string>
    <string name="help">Help</string>
    <string name="myid">Developer</string>
    <string name="myname">Harsh Darji(#HD)</string>
    <string name="mymail">harshdarji1995@gmail.com</string>
    <string name="my">                                       </string>
    <string name="dhumaid">Guided By</string>
    <string name="dhumaname">Dhrumil Shah</string>
    <string name="dhumadv1">Lead Android Developer at Bugle Technologies Pvt. Ltd\n
    Co-organizer at \nGoogle Developers Group Ahmedabad</string>
    <string name="dhumadv2">Co-organizer at \nGoogle Developers Group Ahmedabad</string>
    <string name="trtime">Time : 10:30AM</string>
    <string name="trtitle">TRUSS BRIDGE MODELLING</string>
    <string name="tv1">Details:</string>
    <string name="tv2">The task assigned to the participating teams is to design and
        construct a bridge model, which meets the criteria as given in the rules link.
        The thinking ability and on the spot decision making ability will be tested by
        this competition</string>
    <string name="tv3">Description:</string>
    <string name="tv4">The bridge model should span a total length of 120.0 cm.
The truss and the roadway must be constructed in a single span
and brought to the venue.</string>
    <string name="tv5">Bridge model Construction Criteria</string>
    <string name="tv6"> All parts of the bridge model must be built with Popsicle
sticks (120mm x 12mm x 2mm) and
 “Fevicol MR” (No other material is acceptable and team will be
disqualified if used).
 The roadway (deck slab) must span a total length of 120.0 cm ±
0.5 cm with the centre of the bridge model resting on the support
(which will be
Provided).
 The width of the bridge model must not exceed 15.0 cm at any
point and must be more than 10.0 cm at every point.
 The total thickness of the roadway/ deck slab (mandatory toconstruct in model) must not be more
        than 0.3 cm.
 A roadway / deck slab is required for all bridge models.
 Overlap of two parallel members along their length is not allowed.
 Piers must not be constructed.
 The total weight of the bridge model must not exceed 0.750 kg.
 Coating of paint, adhesive, polish, or any other material must
not be applied to exposed surfaces of the bridge model</string>
    <string name="tv7">Testing Criteria</string>
    <string name="tv8">
Participants have to prepare a TRUSS BRIDGE as per defined
criteria.
 Initial load applied would be 1.5 Kg. Bridge model
should sustain minimum load otherwise it will be
disqualified.
 The bridge model shall be loaded on both ends of the bridge model
(50.0 cm
from the centre of the bridge model on both sides)

If for any reason the loading system cannot be placed at the point
specified, the loading mechanism will be moved towards the ends
of the bridge model until a suitable point is found for loading.
.

Measurement shall stop after peak load is reached, or a deflection
greater than 3.0 cm is reached at any point.
 Winner will be decided by the judges.
 Decision of judges will be final and no further debate will be
allowed.
Some rules and penalties may be mentioned on the spot.
Penalty Criteria
• If bridge model’s total span is less than defined, the model will be
penalized/ disqualified.*
• Use of any material other than specified will result in
disqualification.
• Bridge models with weight greater than specified will be
penalized/ disqualified.*
• If bridge model’s width is greater or smaller than defined, the
model will be penalized/ disqualified.*
• Any irregular cross-sections or irregularities in the workmanship,
bent bridge models, designs, etc. that do not allow us to test the
bridge model on the stated loading mechanism will result in
penalty/ disqualification.*
• Bridge models with piers will be disqualified.
• If coating of paint, adhesive, polish, or any other material is
applied to any exposed surface of the bridge model, the model
will be disqualified.\n**Penalties will be declared at the time of competition. Penalties will be
decided by the judges.</string>
    <string name="tv11">Winning Price:</string>
    <string name="tv12">1st 1500/-\n2nd 1000/-</string>
    <string name="tv13">Student Coordinator:</string>
    <string name="tv14">Suketu Patel\n(7046408353)</string>
    <string name="pptime">Time : 10:30</string>
    <string name="pptitile">BANNER/MODEL PRESENTATION</string>
    <string name="pptv1">Details:</string>
    <string name="pptv2">Getting your ideas on paper is the first step towards making it possible
        and whats better than a confirm chance to get the same printed in a book with an
        ISBN. It’s often better to grab the opportunity while available than regretting in future.
        Making a poster is mandatory for this competition and model is optional. Models should be
        accompanied with the posters.</string>
    <string name="pptv3">Banner Presentation Guidelines</string>
    <string name="pptv4">Making and printing of the banner should be strictly done by abiding
        the following guideline\n
    1.
Banner size should be 3ft by
4ft
2.
It should be in portrait orientation as shown in figure
3.
Banner should contain introduction
(history of the subject)
4.
It should contain brief description
5.
It should contain merits of the project
6.
It should contain the references from where you have taken the idea
on internet.</string>
    <string name="pptv5">Winning Price:</string>
    <string name="pptv6">SURPRISE</string>
    <string name="pptv7">Coordinator</string>
    <string name="pptv8">Hardik Kathayat\n(8460495526)\nAshwin Sivadas\n(9712726649)</string>
    <string name="trtitile">Techranga</string>
    <string name="trtime1">Time : 10:30</string>
    <string name="trtv1">Description:</string>
    <string name="trtv2">Techranga is not just simple rangoli competition. We have added no of
obstacles and event competition themes are also innovative each
rangoli will be on different idea so that each and every rangoli will
present a new message for science, new development, new innovation
and future scopes of engineering and our world.</string>
    <string name="trtv3">Rules:</string>
    <string name="trtv4">• Each team must only comprise of three students \n
        • Time period is 1 hour 30 mins.\n
• All other material should be arranged by the participants except colors\n
• Winners shall be awarded at the valedictory.\n</string>
    <string name="trtv5">Coordinator:</string>
    <string name="trtv6">Ravalyogi Vidhya\n(9428612712)</string>
    <string name="aristime">Time : 10:30</string>
    <string name="aristitle">ARISTO 6 AXIS ROBOT</string>
    <string name="simtitle">SIEMENS SIMOCODE</string>
    <string name="trwinpr">Winning Price:</string>
    <string name="treinpr1">1st-500/-\n2nd-300/-</string>
    <string name="plantitle">PLAN O MANIA</string>
    <string name="plantime">Time : 10:30</string>
    <string name="plan1">Details</string>
    <string name="plan2">In this event, plan statement will be given on the spot and participants
        have to draw plan according to it. Knowledge of standards for various plans will be helpful
        in this event.</string>
    <string name="plan3">Rules:</string>
    <string name="plan4">⇒ You can register with your team or individually.
⇒ Maximum 2 member in team
⇒ Plan statements will be given there.
⇒ Decision of the jury will be final.</string>
    <string name="plan5">Judging criteria :</string>
    <string name="plan6">⇒Arrangement of various components of plan.
⇒Standardization and effectiveness of plan.</string>
    <string name="plan7">Winning Price:</string>
    <string name="plan8">1st 1500/-\n2nd 1000/-</string>
    <string name="plan9">Student Coordinator:</string>
    <string name="plan10">Anshu Patel\n(9879174535)</string>
    <string name="codetitle">CODEPEDIA</string>
    <string name="codetime">Time : 12:00</string>
    <string name="code1">Details:</string>
    <string name="code2">A programmer is judged on his ability speed and performance under pressure
        and intense situations. He should be accurate and perfect in his coding abilities. All
        these skills will be tested in Codepedia.</string>
    <string name="code3">Level:</string>
    <string name="code4">1st: Blind Code
2nd: Code Hunt
3rd: Code Race</string>
    <string name="code5">Rules :</string>
    <string name="code6">⇒ The tools permitted will be “TURBO C”.
⇒ No external drives are allowed.
⇒ In case of any kind of cheating candidate will be lead to disqualification.
⇒ Decision of judges will be final.
⇒ Incase of conflict between students the coordinators decision will be final</string>
    <string name="code7">Winning Price:</string>
    <string name="code8">1st 1000/-\n2nd 500/-</string>
    <string name="code9">Student Coordinator:</string>
    <string name="code10">Yash Agrawal\n(9624078174)</string>
    <string name="stitle">COUNTER STRIKE</string>
    <string name="stime">Time : 11.30</string>
    <string name="stv1">Details:</string>
    <string name="stv2">All work and no play makes not only jack but even an engineer to be dull and
        inactive resource hence gaming skills are also equally important for technical students
        which keeps their mind active and alert all the time.</string>
    <string name="stv3">Rules:</string>
    <string name="stv4">⇒ The team should be of 5 members and no changes of players in the team is allowed after they have played their first round.
⇒ No external drives are allowed.
⇒ Decision of judges will be final.
    • Players must be presented in the tournament area with the whole
team at the notifications schedule. Players are advised to be
present a few minutes before the schedule to avoid any
predictable delay. If the team is not present at the notification
schedule they shall be disqualified.
• Teams will be given 2 minutes configure their setting and after
that use of console or change in setting will be strictly
prohibited.
• No external drives/devices are allowed.
• If the match is involuntary interrupted (Player crash, server
crash, etc..)
 If are of the player is disconnect or crashed, he must come
back in to the game as soon as possible and round will be
paused.
 If the server crashes before 3 rounds, the whole game
shall restart from the beginning else the score will be
recorded and the in the new game start money will be set
to 5000$.
 Compensation will not be given in the money earned in
the game and lost due to interruption of the match.
• The team should be of 5 members and no changes of players in
the team is allowed after they have played their first round.
• Decision of judges will be final.</string>
    <string name="stv5">Winning Price:</string>
    <string name="stv6">1st 1500/-\n2nd 500/-</string>
    <string name="stv7">Student Coordinator:</string>
    <string name="stv9">Yash Agrawal\n(9624078174)</string>
    <string name="ghtitle">GOOGLE HUNT</string>
    <string name="ghtime">Time : 10:30</string>
    <string name="gh1">Details:</string>
    <string name="gh2">The best ideas come from the best way of searching it and engineers generate
        the unique ideas due to their ability to search and find whatever they seek however
        difficult it may be. Can you find what is assigned to you within minutes then this is
        your arena.
</string>
    <string name="gh3">Rules :</string>
    <string name="gh4">⇒ In this event, you will explore cyber world with GOOGLE.
⇒ No external drives are allowed.
⇒ The Google Hunt consists of clues.
⇒ In each level organizer gives the clues (audio, video, images and information) .
        The contestants have to find that clues on Google in certain time limit.</string>
    <string name="gh5">Winning Price:</string>
    <string name="gh6">1st 500/-\n2nd 300/-</string>
    <string name="gh7">Student Coordinator:</string>
</resources>