<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="24dp"
                android:textColor="@color/Blue"
                android:textStyle="bold"
                android:text="@string/myid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="24dp"
                android:textStyle="bold"
                android:textColor="@color/Blue"
                android:text="@string/dhumaid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <ImageView
                android:gravity="center"
                android:layout_weight="1"
                android:src="@drawable/mypic"
                android:layout_width="150dp"
                android:layout_height="150dp" />
            <ImageView
                android:gravity="center"
                android:layout_weight="1"
                android:src="@drawable/dhumapic"
                android:layout_width="150dp"
                android:layout_height="150dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/rad"
                android:text="@string/myname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/rad"
                android:text="@string/dhumaname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <TextView
                android:gravity="center"
                android:text="@string/mymail"
                android:textColor="@color/deeorange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@color/deeorange"
                android:text="@string/dhumadv1"
                android:layout_width="160dp"
                android:layout_marginLeft="5dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="65dp">
        <ImageView
            android:src="@drawable/buglelogocut3"
            android:id="@+id/bugal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"/>
        <ImageView
            android:src="@drawable/gdg"
            android:layout_toRightOf="@id/bugal"
            android:layout_width="60dp"
            android:layout_height="60dp" />
    </RelativeLayout>
</RelativeLayout>
